--- a/style.css
+++ b/style.css
@@ -30,3 +30,101 @@
 .nav-list-link:hover, .contacts-list-link:hover{
     color: #2196F3;
 }
+.section-hero-title{
+    font-family: Roboto;
+        font-size: 44px;
+        font-weight: 900;
+        line-height: 60px;
+        letter-spacing: 0.06em;
+        text-align: center;
+        color:#FFFFFF ;
+}
+.section-hero-btn{
+    font-family: Roboto;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: 0.06em;
+        text-align: center;
+}
+.features-list-title{
+    font-family: Roboto;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 16px;
+        letter-spacing: 0.03em;
+        text-align: left;
+}
+.features-list-test{
+    font-family: Roboto;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.03em;
+        text-align: left;
+}
+.work-title{
+    font-family: Roboto;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 42px;
+        letter-spacing: 0.03em;
+        text-align: center;
+}
+.team-title{
+    font-family: Roboto;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 42px;
+        letter-spacing: 0.03em;
+        text-align: center;
+}
+.team-list-title{
+    font-family: Roboto;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19px;
+        letter-spacing: 0.03em;
+        text-align: center;
+}
+.team-list-text{
+    font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19px;
+        letter-spacing: 0.03em;
+        text-align: center;
+}
+.address-list-link{
+    font-family: Roboto;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.03em;
+        text-align: left;
+        color: #FFFFFF;
+}
+.footer-logo{
+    font-family: Raleway;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 31px;
+        letter-spacing: 0.03em;
+        text-align: left;
+    
+        font-family: Oleo Script;
+        font-size: 26px;
+        font-weight: 400;
+        line-height: 36px;
+        letter-spacing: 0.03em;
+        text-align: left;
+}
+footer{
+    background-color: #2F303A;
+}
+.nav-list{
+    background-color: #ECECEC;
+    width: 1600px;
+     height: 80px;
+      border: 1px;
+}
