--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@
         letter-spacing: 0.06em;
         text-align: center;
         color:#FFFFFF ;
+        margin: 0 auto;
+        max-width: 698px;
+        letter-spacing: 0.06em;
 }
 .section-hero-btn{
     font-family: Roboto;
@@ -46,6 +49,15 @@
         line-height: 30px;
         letter-spacing: 0.06em;
         text-align: center;
+        background: #2196F3;
+        justify-content: center;
+        display: block;
+        margin: 0 auto;
+}
+.section-hero{
+    background: #2F303A;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 .features-list-title{
     font-family: Roboto;
@@ -122,9 +134,33 @@
 footer{
     background-color: #2F303A;
 }
-.nav-list{
-    background-color: #ECECEC;
-    width: 1600px;
-     height: 80px;
-      border: 1px;
+.logo{
+    font-family: Raleway;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 31px;
+        letter-spacing: 0.03em;
+        text-align: left;
+    
+        font-family: Oleo Script;
+        font-size: 26px;
+        font-weight: 400;
+        line-height: 36px;
+        letter-spacing: 0.03em;
+        text-align: left;
+        
+}
+.header{
+display: flex;
+justify-content: center;
+gap: 50px;
+height: 50px;
+align-items: center;
+}
+.header-logo{
+    color: #000000;
+}
+.nav-list, .contacts-list{
+    display: flex;
+    gap: 50px;
 }
